--- a/cmd/android/magopie/app/src/main/AndroidManifest.xml
+++ b/cmd/android/magopie/app/src/main/AndroidManifest.xml
@@ -2,22 +2,33 @@
 <manifest package="com.bullercodeworks.magopie"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+  <application
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:supportsRtl="true"
+      android:theme="@style/AppTheme">
+    <activity
+        android:name=".MainActivity"
         android:label="@string/app_name"
-        android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-    </application>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity
+        android:name=".ConfigActivity"
+        android:label="magopie config"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme"/>
+    <activity
+        android:name=".AboutActivity"
+        android:label="about magopie"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme"/>
+  </application>
 
 </manifest>
